--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@remotion/lambda": "^4.0.332",
-    "@remotion/player": "^4.0.332",
+    "@remotion/cli": "4.0.340",
+    "@remotion/lambda": "4.0.340",
+    "@remotion/player": "4.0.340",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
     "class-variance-authority": "^0.7.1",
@@ -44,7 +45,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.8.0",
-    "remotion": "^4.0.332",
+    "remotion": "4.0.340",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.5",
+    "@remotion/eslint-plugin": "^4.0.340",
     "@tailwindcss/typography": "^0.5.14",
     "@types/mime-types": "^3.0.1",
     "@types/node": "^22.3.0",
