--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.23",
     "@auth/drizzle-adapter": "^1.4.2",
     "@aws-sdk/client-s3": "^3.873.0",
     "@fal-ai/client": "^1.6.2",
@@ -31,6 +32,7 @@
     "@remotion/player": "4.0.340",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
+    "ai": "^5.0.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.1",
