--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,22 @@ AUTH_GOOGLE_SECRET="your-google-client-secret"
 LEMONSQUEEZY_API_KEY="your-lemonsqueezy-api-key"
 LEMONSQUEEZY_STORE_ID="your-store-id"
 LEMONSQUEEZY_WEBHOOK_SECRET="your-webhook-secret"
+
+# OpenAI Configuration
+OPENAI_API_KEY="your-openai-api-key"
+
+# AWS/Lambda Configuration for Remotion
+AWS_REGION="us-east-1"
+AWS_ACCESS_KEY_ID="your-aws-access-key"
+AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
+
+# Cloudflare R2 Configuration for Video Storage
+R2_BUCKET_NAME="your-r2-bucket-name"
+R2_ENDPOINT="https://your-account-id.r2.cloudflarestorage.com"
+R2_ACCESS_KEY_ID="your-r2-access-key"
+R2_SECRET_ACCESS_KEY="your-r2-secret-key"
+R2_PUBLIC_URL="https://your-bucket.your-domain.com"
+
+# Remotion Configuration
+REMOTION_SERVE_URL="https://your-app-domain.com/remotion"
+NEXT_PUBLIC_APP_URL="https://your-app-domain.com"
