Integrate ElevenLabs API for speech generation and enhance voice selection UI
- Added ElevenLabs API key configuration to `.env.example` for integration.
- Updated `package.json` and `pnpm-lock.yaml` to include the `@ai-sdk/elevenlabs` dependency.
- Refactored `VideoGenerationService` to utilize the new `SpeechService` for generating speech, consolidating audio generation logic.
- Enhanced `VoiceSelection` and `VoiceSelector` components to support multiple voice providers, improving user experience in voice selection.
- Grouped voices by provider in the UI for better organization and clarity.
- Made minor adjustments to UI components for improved layout and consistency.

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ LEMONSQUEEZY_WEBHOOK_SECRET="your-webhook-secret"
 # OpenAI Configuration
 OPENAI_API_KEY="your-openai-api-key"
 
+# ElevenLabs Configuration
+ELEVENLABS_API_KEY="your-elevenlabs-api-key"
+
 # AWS/Lambda Configuration for Remotion
 AWS_REGION="us-east-1"
 AWS_ACCESS_KEY_ID="your-aws-access-key"
